[common mobile] Fixed color-preview styles for ios

--- a/apps/common/mobile/resources/less/common-ios.less
+++ b/apps/common/mobile/resources/less/common-ios.less
@@ -172,6 +172,13 @@
                     background-color: @autoColor;
                 }
             }
+            .item-after {
+                .color-preview {
+                    width: 75px;
+                    height: 30px;
+                    margin-top: -3px;
+                }
+            }
         }
         li.no-indicator {
             .item-link {
